# M214_AdvancedCpp-Projekt_Librarysystem

./: CMakeLists.txt  README.md  netProtocol.txt
client/: CMakeLists.txt  Client.cpp  Client.h  UI.cpp  UI.h  main.cpp
client/core/: Client.cpp  Client.h  UI.cpp  definitions.h
client/gui/: add+editbook.cpp  add+editbook.h  librarymaingui.cpp  librarymaingui.h
client/gui/ui/: add+editbook.ui  mainwindow.ui
client_build/: .cproject  .project  CMakeCache.txt  Makefile  advanced_cpp_library_client  cmake_install.cmake
server/: CMakeLists.txt  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
server/core/: book.cpp  book.h  library.cpp  library.h  networkconnection.cpp  networkconnection.h  networkmanagement.cpp  networkmanagement.h  user.cpp  user.h  usermanagement.cpp  usermanagement.h
server/gui/: add+editbook.cpp  add+editbook.h  add+editbook.ui  librarymaingui.cpp  librarymaingui.h  librarymaingui.ui  libraryviewmodel.cpp  libraryviewmodel.h  userviewmodel.cpp  userviewmodel.h
server_build/: .cproject  .project  CMakeCache.txt  Makefile  advanced_cpp_library_server  cmake_install.cmake
tests/: CMakeLists.txt
tests/server/: book_test.cpp  library_test.cpp  networkconnection_test.cpp  user_test.cpp  usermanagement_test.cpp
universal/: definitions.h
